--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -39,10 +39,6 @@ jobs:
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Clone Dream theme
-        run: |
-          cd themes
-          git clone https://github.com/g1eny0ung/hugo-theme-dream.git dream
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
@@ -55,7 +51,7 @@ jobs:
             --cleanDestinationDir \
             --gc \
             --minify \
-            --config hugo.github-pages-preview.toml
+            --config hugo.toml
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
